examples/test/testpolicy10124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10124
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key45: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value21
          key44: value31
      podSelector:
        matchLabels:
          key5: value25
          key33: value12
          key38: value41
